--- a/app/assets/templates/root.jst.ejs
+++ b/app/assets/templates/root.jst.ejs
@@ -1,19 +1,22 @@
-<h1 class="welcome">Welcome to AirNZG!</h1>
+<figure class="logo-main"></figure>
 
 <h3>What are you looking for?</h3>
 
 <form class="listing-search">
-  <label for="short-term">Short Term (less than 1 month)</label>
-  <input type="radio" name="term" value="short" id="short-term">
-
-  <label for="long-term">Long Term (a month or longer)</label>
-  <input type="radio" name="term" value="long" id="long-term">
+	
+	<section class="parallel-radios">
+	  <input type="radio" name="term" value="short" id="short-term">
+		
+	  <input type="radio" name="term" value="long" id="long-term">
+	</section>
 
   <br>
-
+	
+	<section class="">
   <label for="listing-city">Where to?</label>
   <input type="text" name="city" id="listing-city"
          placeholder="City, Country">
+	</section>
 
   <label for="listing-start">Start Date</label>
   <input type="date" name="start" id="listing-start">
