--- a/app/assets/templates/root.jst.ejs
+++ b/app/assets/templates/root.jst.ejs
@@ -12,21 +12,22 @@
 
   <br>
 	
-	<section class="">
-  <label for="listing-city">Where to?</label>
-  <input type="text" name="city" id="listing-city"
-         placeholder="City, Country">
+	<section class="city-accommodates-input">
+	  <label for="listing-city">Where to?</label>
+	  <input type="text" name="city" id="listing-city"
+	         placeholder="e.g. 'Chicago'">
+					 
+    <label for="listing-accomodates">For how many?</label>
+    <input type="number" name="accomodates" 								 					 id="listing-accomodates" placeholder="# of Guests">
 	</section>
+	
+	<section class="date-inputs">
+	  <label for="listing-start">Start Date</label>
+	  <input type="date" name="start" id="listing-start">
 
-  <label for="listing-start">Start Date</label>
-  <input type="date" name="start" id="listing-start">
-
-  <label for="listing-end">End Date</label>
-  <input type="date" name="end" id="listing-end">
-
-  <label for="listing-accomodates">For how many?</label>
-  <input type="number" name="accomodates" id="listing-accomodates"
-         placeholder="# of Guests">
+	  <label for="listing-end">End Date</label>
+	  <input type="date" name="end" id="listing-end">
+	</section>
 
   <button>Search</button>
 
