--- a/app/assets/templates/root.jst.ejs
+++ b/app/assets/templates/root.jst.ejs
@@ -14,10 +14,10 @@
 	
 	<section class="city-accommodates-input">
 	  <label for="listing-city">Where to?</label>
+    <label for="listing-accommodates">For how many?</label>
+		
 	  <input type="text" name="city" id="listing-city"
 	         placeholder="e.g. 'Chicago'">
-					 
-    <label for="listing-accomodates">For how many?</label>
     <input type="number" name="accomodates" 								 					 id="listing-accomodates" placeholder="# of Guests">
 	</section>
 	
