--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -24,9 +24,12 @@
 }
 
 .listing-search {
+	width: 400px;
 }
 
 .parallel-radios {
+	display: block;
+	height: 50px;
 	width: 304px;
 	margin: auto;
 }
@@ -73,4 +76,27 @@
 
 #long-term {
 	border-radius: 0 20px 20px 0;
+}
+
+.city-accomodates-input {
+	padding-top: 300px;
+	width: 400px;
+	margin: auto;
+	display: block;
+}
+
+.city-accommodates-input > label {
+	display: block;
+	width: 200px;
+	float: left;
+}
+
+input#listing-city, input#listing-accomodates {
+	display: block;
+	width: 190px;
+	margin: 4px;
+	text-align: center;
+	float: left;
+	border: 1px solid #000;
+	border-radius: 5px;
 }
