--- a/app/assets/templates/listings/index.jst.ejs
+++ b/app/assets/templates/listings/index.jst.ejs
@@ -1,10 +1,14 @@
-<section id="map">
+<section class="map-wrapper">
+	<div id="map">
+	</div>
 </section>
+
 <div class='info'></div>
 
-<section class="listing-params">
-</section>
+<section class="listings-content">
+	<article class="listing-params"></article>
 
-<h3>Listings</h3>
-<section class="listings-list"></section>
+	<h3>Listings</h3>
+	<article class="listings-list"></article>
+</section>
 
