--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
     </nav>
   </header>
 
-  <main class="group">
+  <main class="main-content group">
 		
 		<span class="notice-bar">
 	    <% if !!flash[:notice] %>
