--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -16,7 +16,6 @@
 }
 
 .root-content {
-	padding: 60px;
 }
 
 .root-content > h3 {
@@ -91,7 +90,7 @@
 	float: left;
 }
 
-input#listing-city, input#listing-accomodates {
+#listing-city, #listing-accomodates {
 	display: block;
 	width: 190px;
 	margin: 4px;
@@ -99,4 +98,45 @@ input#listing-city, input#listing-accomodates {
 	float: left;
 	border: 1px solid #000;
 	border-radius: 5px;
+}
+
+.date-inputs {
+	width: 400px;
+	margin: auto;
+	display: block;
+}
+
+.date-inputs > label {
+	display: block;
+	margin-top: 20px;
+	width: 200px;
+	float: left;
+}
+
+input#listing-start, input#listing-end {
+	display: block;
+	width: 190px;
+	margin: 4px;
+	text-align: center;
+	float: left;
+	border: 1px solid #000;
+	color: #999;
+	border-radius: 5px;
+}
+
+.listing-search button {
+	width: 125px;
+	height: 50px;
+	margin: 20px;
+	background: #000;
+	color: #fff;
+	font-weight: bold;
+	font-size: 20px;
+	border-radius: 10px;
+}
+
+.listing-search button:active {
+	box-sizing: border-box;
+	border-top: 2px solid #000;
+	background: #222;
 }
