--- a/app/assets/stylesheets/listings_index.css.scss
+++ b/app/assets/stylesheets/listings_index.css.scss
@@ -21,22 +21,87 @@
   padding: 20px;
 }
 
-.dates > strong {
+.listing-params strong {
 	display: block;
 	float: left;
+	font-size: 20px;
+	padding: 5px 20px;
+}
+
+.filter-form > article {
+	display: block;
+	margin: auto;
+	padding-bottom: 20px;
+	width: 400px;
 }
 
 .dates > div {
-	width: 300px;
+	width: 200px;
 	display: block;
 	float: left;
-	margin: auto;
 	text-align: center;
 }
 
 .dates > div > input {
 	display: block;
 	margin: auto;
+}
+
+.room > input[type=radio] {
+	padding: 0 10px;
+	background: #008A99;
+	height: 30px;
+	width: 90px;
+	display: block;
+	float: left;
+	position: relative;
+	margin: 1px 10px;
+	border-radius: 10px;
+	
+	color: #fff;
+	font-weight: bold;
+	font-family: sans-serif;
+	font-size: 14px;
+}
+
+.room > input[type=radio]:checked {
+	background: #00606B;
+}
+
+.room > #room-type-whole:after {
+	position: absolute;
+	content: "Whole Place";
+	top: 7px;
+	left: 12px;
+}
+
+.room > #room-type-shared:after {
+	position: absolute;
+	content: "Shared Room";
+	top: 7px;
+	left: 11px;
+}
+
+.room > #room-type-private:after {
+	position: absolute;
+	content: "Private Room";
+	top: 7px;
+	left: 10px;
+}
+
+.price > input {
+	border: 1px solid black;
+}
+
+.price > div {
+	width: 50px;
+	display: block;
+	float: left;
+}
+
+div.price-slider {
+	width: 298px;
+	margin: 10px auto;
 }
 
 .filter-form > button {
