--- a/app/assets/templates/listings/filter.jst.ejs
+++ b/app/assets/templates/listings/filter.jst.ejs
@@ -1,55 +1,60 @@
 <!-- Hidden form inputs carry over search params from prev. page -->
+
+<!-- move these out of this view to prevent rerendering -->
 <input type="hidden" value="<%= listings.params().term %>" name="term">
 <input type="hidden" value="<%= listings.params().city %>" name="city">
 <input type="hidden" name="accomodates" 
 			 value="<%= listings.params().accomodates %>">
 
+<strong>Dates:</strong>
 <article class="dates group">
-	<strong>Dates:</strong>
-	
 	<div class="start">
-	<label for="listing-start">Start Date</label>
-	<input type="date" id="listing-start" value="<%= listings.params().start %>"
-				 name="start">
+		<input type="date" id="listing-start" value="<%= listings.params().start %>"
+					 name="start">
+		<label for="listing-start">Start Date</label>
 	 </div>
 	 
 	 <div class="end">
-	<label for="listing-end">End Date</label>
-	<input type="date" id="listing-end" value="<%= listings.params().end %>"
-				 name="end">
+		<input type="date" id="listing-end" value="<%= listings.params().end %>"
+					 name="end">
+	 <label for="listing-end">End Date</label>
 	 </div>
 </article>
 
-
-<br>
-
 <strong>Room:</strong>
-<label for="room-type-whole">Whole Apt/Home</label>
-<input type="radio" name="room_type" value="whole" id="room-type-whole"
-       <% if(listings.params().room_type === "whole") { %>
-				 <%= "checked" %> 
-			 <% } %>>
+<article class="room group">
+	<input type="radio" name="room_type" value="whole" id="room-type-whole"
+	       <% if(listings.params().room_type === "whole") { %>
+					 <%= "checked" %> 
+				 <% } %>>
 
-<label for="room-type-private">Private Room</label>
-<input type="radio" name="room_type" value="private" id="room-type-private"
-       <% if(listings.params().room_type === "private") { %>
-				 <%= "checked" %> 
-			 <% } %>>
+	<input type="radio" name="room_type" value="private" id="room-type-private"
+	       <% if(listings.params().room_type === "private") { %>
+					 <%= "checked" %> 
+				 <% } %>>
 
-<label for="room-type-shared">Shared Room</label>
-<input type="radio" name="room_type" value="shared" id="room-type-shared"
-       <% if(listings.params().room_type === "shared") { %>
-				 <%= "checked" %> 
-			 <% } %>>
-<br>
+	<input type="radio" name="room_type" value="shared" id="room-type-shared"
+	       <% if(listings.params().room_type === "shared") { %>
+					 <%= "checked" %> 
+				 <% } %>>
+</article>
 
 <strong>Price:</strong>
+<article class="price group">
+	<div class="price-low"></div>
+	<div class="price-slider"></div>
+	<div class="price-high"></div>
+</article>
+
+
+
 <input type="number" placeholder="Low Price"
        name="low_price" value="<%= listings.params().low_price %>">
 <input type="number" placeholder="High Price"
        name="high_price" value="<%= listings.params().high_price %>">
 <br>
+</article>
 
-<div class="price-slider"></div>
+
 
 <button>Filter</button>
