Minor styling adjustments on root page.

--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -93,6 +93,7 @@
 #listing-city, #listing-accomodates {
 	display: block;
 	width: 190px;
+	height: 25px;
 	margin: 4px;
 	text-align: center;
 	float: left;
@@ -116,6 +117,7 @@
 input#listing-start, input#listing-end {
 	display: block;
 	width: 190px;
+	height: 25px;
 	margin: 4px;
 	text-align: center;
 	float: left;
