--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,7 +56,7 @@ input[type="radio"],
   color: inherit;
 }
 
-input[type="submit"] {
+input[type="submit"], button {
   display: inline;
   cursor: pointer;
 }
