Fix filter form so that it retains memory of previous search. Fix seed data so that it property gets lat and long from address.

--- a/app/assets/templates/listings/filter.jst.ejs
+++ b/app/assets/templates/listings/filter.jst.ejs
@@ -1,4 +1,9 @@
 <!-- Hidden form inputs carry over search params from prev. page -->
+<input type="hidden" value="<%= listings.params().term %>" name="term">
+<input type="hidden" value="<%= listings.params().city %>" name="city">
+<input type="hidden" name="accomodates" 
+			 value="<%= listings.params().accomodates %>">
+
 
 <strong>Dates:</strong>
 <article class="dates group">
