--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 		          <li><a href="<%= my_listings_url %>">
 								Your Listings
 							</a></li>
-		          <li><a href="<%= my_booking_requests_url %>">
+		          <li><a href="#/my_booking_requests">
 								Your Booking Requests
 							</a></li>
 		          <li><a href="#">
