--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,20 +25,17 @@
 						<%= image_tag current_user.avatar.url(:thumb) %>
 						
 		        <ul class="dropdown">
-		          <li><a href="<%= my_listings_url %>">
+		          <li><a href="#/my_listings">
 								Your Listings
 							</a></li>
 		          <li><a href="#/my_booking_requests">
 								Your Booking Requests
 							</a></li>
-		          <li><a href="#">
+		          <li><a href="#/wishlist">
 								Your Wishlist
 							</a></li>
-		          <li><a href="<%= edit_user_url(current_user) %>">
+		          <li><a href="#/users/:id/edit">
 								Edit Profile
-							</a></li>
-		          <li><a href="#">
-								Account
 							</a></li>
 		          <li>
 								<%= link_to 'Log Out', session_url, 
