Throw out useless stylesheets.

--- a/app/assets/stylesheets/listings_index.css.scss
+++ b/app/assets/stylesheets/listings_index.css.scss
@@ -26,11 +26,13 @@
 	float: left;
 	font-size: 20px;
 	padding: 5px 20px;
+	padding-left: 25px;
 }
 
 .filter-form > article {
 	display: block;
 	margin: auto;
+	padding-left: 50px;
 	padding-bottom: 20px;
 	width: 400px;
 }
