Add map centering on hover.

--- a/app/assets/stylesheets/listings_index.css.scss
+++ b/app/assets/stylesheets/listings_index.css.scss
@@ -129,6 +129,7 @@ div.price-slider {
 .listings-content > h3 {
 	margin: 0 auto;
 	padding-bottom: 20px;
+	text-align: center;
 }
 
 .listing-box {
