--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -33,6 +33,36 @@ article.root-content {
 	height: 50px;
 	width: 304px;
 	margin: auto;
+	
+	#short-term {
+		border-radius: 20px 0 0 20px;
+	}
+
+	#short-term:after {
+		position: absolute;
+		content: "Short Term";
+		font-size: 20px;
+		top: 15px;
+		left: 25px;
+		color: #fff;
+		font-weight: bold;
+		font-family: sans-serif;
+	}
+
+	#long-term:after {
+		position: absolute;
+		content: "Long Term";
+		font-size: 20px;
+		top: 15px;
+		left: 20px;
+		color: #fff;
+		font-weight: bold;
+		font-family: sans-serif;
+	}
+
+	#long-term {
+		border-radius: 0 20px 20px 0;
+	}
 }
 
 .parallel-radios > input[type=radio] {
@@ -49,50 +79,18 @@ article.root-content {
 	background: #00606B;
 }
 
-#short-term {
-	border-radius: 20px 0 0 20px;
+
+
+.city-accommodates-input {
+	label {
+		display: block;
+		width: 200px;
+		float: left;
+	}
 }
 
-#short-term:after {
-	position: absolute;
-	content: "Short Term";
-	font-size: 20px;
-	top: 15px;
-	left: 25px;
-	color: #fff;
-	font-weight: bold;
-	font-family: sans-serif;
-}
-
-#long-term:after {
-	position: absolute;
-	content: "Long Term";
-	font-size: 20px;
-	top: 15px;
-	left: 20px;
-	color: #fff;
-	font-weight: bold;
-	font-family: sans-serif;
-}
-
-#long-term {
-	border-radius: 0 20px 20px 0;
-}
-
-.city-accomodates-input {
-	padding-top: 300px;
-	width: 400px;
-	margin: auto;
-	display: block;
-}
-
-.city-accommodates-input > label {
-	display: block;
-	width: 200px;
-	float: left;
-}
-
-#listing-city, #listing-accomodates {
+.city-accommodates-input > #listing-city, 
+.city-accommodates-input > #listing-accomodates {
 	display: block;
 	width: 190px;
 	height: 25px;
@@ -107,27 +105,26 @@ article.root-content {
 	width: 400px;
 	margin: auto;
 	display: block;
+	
+	label {
+		display: block;
+		margin-top: 20px;
+		width: 200px;
+		float: left;
+	}
+	
+	#listing-start, #listing-end {
+		display: block;
+		width: 190px;
+		height: 25px;
+		margin: 4px;
+		text-align: center;
+		float: left;
+		border: 1px solid #000;
+		color: #999;
+		border-radius: 5px;
+	}
 }
-
-.date-inputs > label {
-	display: block;
-	margin-top: 20px;
-	width: 200px;
-	float: left;
-}
-
-input#listing-start, input#listing-end {
-	display: block;
-	width: 190px;
-	height: 25px;
-	margin: 4px;
-	text-align: center;
-	float: left;
-	border: 1px solid #000;
-	color: #999;
-	border-radius: 5px;
-}
-
 .listing-search button {
 	width: 125px;
 	height: 50px;
