Make functional form in backbone for new listings, which creates lat/long for new listing.

--- a/app/assets/templates/listings/new.jst.ejs
+++ b/app/assets/templates/listings/new.jst.ejs
@@ -11,10 +11,9 @@
 	  <input type="text" name="city" id="listing-city" list="cities">
 	  <datalist id="cities">
 			<!-- readlines from us-zips to get all US cities -->
-	    <option value="New York, United States">
-	    <option value="Chicago, United States">
-	    <option value="Los Angeles, United States">
-	    <option value="Tokyo, Japan">
+	    <option value="New York">
+	    <option value="Chicago">
+	    <option value="Los Angeles">
 	  </datalist>
 	</article>
 	
@@ -61,7 +60,7 @@
 	<small>Per day if short term, per month if long term</small>
   
   <article class="address group">
-		<label for="listing-address">Address: </label>
+		<label for="listing-address">Street Address: </label>
 		<input type="text" name="address" id="listing-address">
 	</article>
 	<small>Used for geolocation purposes; never shared with other users!</small>
