--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
 				</li>
 			
 				<li class="new-listing">
-	        <a href="<%= new_listing_url %>">New Listing</a>
+	        <a href="#/listings/new">New Listing</a>
 				</li>
 				
       <% else %>
