--- a/app/assets/templates/listings/new.jst.ejs
+++ b/app/assets/templates/listings/new.jst.ejs
@@ -65,6 +65,8 @@
 	</article>
 	<small>Used for geolocation purposes; never shared with other users!</small>
 	
+	<span class="error-bar"></span>
+	
   <button>Create Listing</button>
 
 </form>
