--- a/app/assets/templates/listings/new.jst.ejs
+++ b/app/assets/templates/listings/new.jst.ejs
@@ -54,7 +54,7 @@
 	</article>
 	
 	<article class="price group">
-	  <label for="listing-price">Price: </label>
+	  <label for="listing-price">Price (USD): </label>
 	  <input type="text" name="price" id="listing-price">
 	</article>
 	<small>Per day if short term, per month if long term</small>
