Add amenities to edit listing page.

--- a/app/assets/stylesheets/listing_form.css.scss
+++ b/app/assets/stylesheets/listing_form.css.scss
@@ -123,5 +123,9 @@ div.form-container {
 		border-top: 2px solid #000;
 		background: #222;
 	}
+	
+	.amenity-wrapper > input[type=checkbox] {
+		margin: 5px;
+	}
 }
 
